--- a/src/main/webapp/resources/css/my_messages.css
+++ b/src/main/webapp/resources/css/my_messages.css
@@ -1,9 +1,3 @@
-html,
-body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    background: #181818;
-}
 h2 {
     color: white;
 }
@@ -60,7 +54,7 @@ h4 {
 }
 .productName {
     color: black;
-    height: 25px;
+    height: 30px;
     overflow: hidden;
     width:200px;
     font-weight: bold;
@@ -127,6 +121,13 @@ h4 {
 .send:hover {
     background-color: #268841;
 }
+.aList{
+    transition: all 0.1s ease-in-out;
+}
+.aList:hover {
+    transition: all 0.1s ease-in-out;
+    transform: translateY(-3px);
+}
 #message-box {
     position: absolute; /* added */
     bottom: 5px; /* added */
@@ -162,7 +163,7 @@ textarea:focus {
 }
 @media screen and (max-width: 950px) {
     .globalContainer {
-        margin-top: -76px;
+        margin-top: 35px;
         margin-left: 10px;
         width: 100%;
     }
