--- a/src/main/webapp/resources/css/my_profile.css
+++ b/src/main/webapp/resources/css/my_profile.css
@@ -1,12 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
-html,
-body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    background: #181818;
-
-}
 h2 {
     color: white;
 }
@@ -368,6 +361,34 @@ input[type="radio"] {
 
 @media screen and (max-width: 950px) {
     .parent {
+        margin-bottom: 100px;
         margin-left: 40px;
     }
+}
+@media screen and (max-width: 500px){
+    .listProfile1{
+        height: 400px;
+    }
+}
+
+.titlecontainer{
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+
+}
+.logout{
+    margin-right: 40px;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    padding: 10px;
+    text-decoration: none;
+    font-size: 13px;
+    line-height: 10px;
+    border-radius: 4px;
+}
+.logout:hover {
+    background-color: #bb2840;
+    color: white;
 }
