Messaging added product page

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -56,7 +56,9 @@ body {
 }
 
 /*SEARCH BAR*/
-
+.flex-container a{
+    text-decoration: none;
+}
 .search {
     position: relative;
     display: flex;
