--- a/src/main/webapp/resources/css/my_products.css
+++ b/src/main/webapp/resources/css/my_products.css
@@ -11,7 +11,7 @@ h4 {
     margin-top: 60px;
 }
 .list {
-    margin: 60px 40px 40px 230px;
+    margin: 0 40px 40px 260px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -73,7 +73,7 @@ h4 {
 .sell {
     font-size: 20px;
     margin-left: auto;
-    margin-top: 20px;
+    margin-top: 22px;
     height: 50px;
     width: 50px;
     border-radius: 5px;
@@ -88,9 +88,9 @@ h4 {
     color: white;
 }
 .reserve {
-    font-size: 20px;
+    font-size: 18px;
     margin-left: auto;
-    margin-top: 20px;
+    margin-top: 22px;
     height: 50px;
     width: 50px;
     border-radius: 5px;
@@ -107,7 +107,7 @@ h4 {
 .edit {
     font-size: 20px;
     margin-left: auto;
-    margin-top: 20px;
+    margin-top: 22px;
     margin-right: 20px;
     height: 50px;
     width: 50px;
@@ -122,6 +122,18 @@ h4 {
     background-color: #30ab53;
     color: white;
 }
+.buttons{
+    display: flex;
+    flex-direction: row;
+}
+.checkbox{
+    margin: 37px 0 0 225px;
+    position: absolute;
+}
+.checkboxSave{
+    text-align: center;
+}
+
 @media screen and (max-width: 1049px) {
     .modifyDate-container {
         display: none;
@@ -138,7 +150,7 @@ h4 {
         width: 30px;
     }
     .reserve {
-        margin-top: 30px;
+        margin-top: 32px;
         height: 30px;
         width: 30px;
     }
@@ -157,6 +169,10 @@ h4 {
     }
     .list {
         margin-left: 40px;
+    }
+    .checkbox{
+        margin-left: 5px;
+        position: absolute;
     }
 }
 
