--- a/src/main/webapp/resources/css/my_messages.css
+++ b/src/main/webapp/resources/css/my_messages.css
@@ -1,28 +1,35 @@
+html {
+    background-image: url("../img/cover.png");
+    margin: 0;
+}
+
 h2 {
     color: white;
 }
+
 h4 {
     font-weight: normal;
     color: rgb(156, 156, 156);
 }
+
 .globalContainer {
     margin-left: 230px;
     margin-top: 60px;
-    position: fixed;
-    width: 70%;
-
     height: 80%;
     border-radius: 5px;
 }
+
 .containerMessage {
     display: flex;
     flex-direction: row;
     height: 100%;
 }
+
 .containerList {
     display: flex;
     flex-direction: column;
 }
+
 .listMessages {
     margin-bottom: 10px;
     height: 80px;
@@ -34,6 +41,7 @@ h4 {
     background-color: rgb(100, 100, 100);
     border-radius: 5px;
 }
+
 .data {
     margin-left: 5px;
     width: 100%;
@@ -41,42 +49,186 @@ h4 {
     flex-direction: column;
     justify-content: space-between;
 }
+
 .name {
     font-size: 12px;
     color: #303030;
 }
+
 .dateLastMessage {
     color: black;
     margin-right: 15px;
 }
-.lastMessage{
+
+.lastMessage {
+    max-width: 150px;
+    overflow: hidden;
     color: black;
 }
+
 .productName {
     color: black;
     height: 30px;
     overflow: hidden;
-    width:200px;
+    width: 200px;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 18px;
+    line-height: 28px;
 }
+
 .top {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
+
 .img {
     border-radius: 5px;
     height: 80px;
 }
-.messages1 {
-    position: relative;
+
+.messageContainer {
     width: 100%;
-    border-radius: 5px;
-    bottom: 0;
-    margin: 0 10px 5px 10px;
-    background-color: rgb(54, 54, 54);
+    position: relative;
+    height: 600px;
+    margin: 0 0 0 10px;
 }
+
+.user{
+    background-color: rgb(100, 100, 100);
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.buttonDeleteConvo{
+    float: right;
+    margin-right: 15px;
+    width: 30px;
+    border-radius: 5px;
+}
+
+
+
+.buttonDeleteConvo:hover {
+    background: #06D85F;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.7);
+    transition: opacity 500ms;
+    visibility: hidden;
+    opacity: 0;
+    z-index: 2;
+}
+.overlay:target {
+    visibility: visible;
+    opacity: 1;
+}
+
+.popup {
+    margin: 70px auto;
+    padding: 20px;
+    background: #fff;
+    border-radius: 5px;
+    width: 30%;
+    position: relative;
+    transition: all 5s ease-in-out;
+}
+
+.popup h2 {
+    margin-top: 0;
+    color: #333;
+    font-family: Tahoma, Arial, sans-serif;
+}
+.popup .close {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    transition: all 200ms;
+    font-size: 30px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #333;
+}
+.popup .close:hover {
+    color: #06D85F;
+}
+.popup .popUpContent {
+    max-height: 30%;
+    overflow: auto;
+}
+
+.deleteConvo{
+    margin-right: 40px;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    padding: 10px;
+    text-decoration: none;
+    font-size: 13px;
+    line-height: 10px;
+    border-radius: 4px;
+}
+.deleteConvo:hover {
+    background-color: #bb2840;
+    color: white;
+}
+
+@media screen and (max-width: 700px){
+    .box{
+        width: 70%;
+    }
+    .popup{
+        width: 70%;
+    }
+}
+
+.messages1 {
+    width: 100%;
+    height: 510px;
+    border-radius: 5px;
+    background-color: rgb(54, 54, 54);
+    overflow-y: auto;
+    position: absolute;
+
+}
+.messageContent{
+    color: #c6c6c6;
+    margin: 5px 20px 5px 15px;
+    border: 2px solid #4d7458;
+    border-radius: 5px;
+    right: 20px;
+    word-wrap: break-word;
+    text-align: right;
+    padding: 5px;
+    font-weight: bold ;
+}
+.messageContentOther{
+    color: #c6c6c6;
+    margin: 5px 20px 5px 15px;
+    border: 2px solid rgba(8, 97, 23, 0.56);
+    border-radius: 5px;
+    right: 20px;
+    word-wrap: break-word;
+    text-align: left;
+    padding: 5px;
+    font-weight: bold ;
+}
+.messages1 i{
+    position: absolute;
+    right: 0;
+    margin-top: -24px;
+}
+.formDiv {
+    bottom: 0;
+    position: absolute;
+    width: 100%;
+}
+
 .input,
 .textarea {
     border: 1px solid #ccc;
@@ -88,15 +240,18 @@ h4 {
 .input-wrap {
     position: relative;
 }
+
 .input-wrap .input {
     position: absolute;
     width: 100%;
     left: 0;
 }
+
 .width-machine {
     /*   Sort of a magic number to add extra space for number spinner */
     padding: 0 1rem;
 }
+
 .send {
     position: absolute; /* added */
     bottom: 5px; /* added */
@@ -121,13 +276,16 @@ h4 {
 .send:hover {
     background-color: #268841;
 }
-.aList{
+
+.aList {
     transition: all 0.1s ease-in-out;
 }
+
 .aList:hover {
     transition: all 0.1s ease-in-out;
     transform: translateY(-3px);
 }
+
 #message-box {
     position: absolute; /* added */
     bottom: 5px; /* added */
@@ -143,6 +301,7 @@ h4 {
     overflow: hidden;
     padding: 0;
 }
+
 textarea {
     overflow: auto;
     resize: none;
@@ -152,22 +311,35 @@ textarea {
     font-size: 20px;
     color: rgb(146, 146, 146);
 }
+
 textarea:focus {
     box-shadow: 0px 0px #30ab53;
     -moz-box-shadow: 0 0 0 5px #30ab53;
     -webkit-box-shadow: 0 0 0 5px #30ab53;
     -o-box-shadow: 0 0 0 5px #30ab53;
 }
-.containerList a{
+
+.containerList a {
     text-decoration: none;
 }
+
 @media screen and (max-width: 950px) {
     .globalContainer {
-        margin-top: 35px;
-        margin-left: 10px;
-        width: 100%;
+        margin-left: 40px;
+        margin-right: 10px;
     }
+
     .listMessages {
         width: 350px;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .data {
+        display: none;
+    }
+
+    .listMessages {
+        width: auto;
     }
 }
