--- a/src/main/webapp/resources/css/my_profile.css
+++ b/src/main/webapp/resources/css/my_profile.css
@@ -1,5 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
-
 h2 {
     color: white;
 }
@@ -271,6 +269,7 @@ input[type="radio"] {
 }
 .surname {
     position: relative;
+
     margin-left: 15px;
     margin-bottom: 10px;
     margin-right: 10px;
@@ -376,7 +375,7 @@ input[type="radio"] {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-
+    height: 32px;
 }
 .logout{
     margin-right: 40px;
