--- a/src/main/webapp/resources/css/my_products.css
+++ b/src/main/webapp/resources/css/my_products.css
@@ -12,6 +12,7 @@ h4 {
 }
 
 .list {
+    text-decoration: none;
     margin: 0 40px 40px 30px;
     display: flex;
     flex-direction: row;
@@ -20,6 +21,11 @@ h4 {
     background: #404040;
     border-radius: 5px;
     justify-content: space-between;
+    color: black;
+}
+.list:hover{
+    transition: all 0.1s ease-in-out;
+    transform: translateY(-3px);
 }
 .list img {
     margin: 5px;
@@ -135,7 +141,6 @@ h4 {
     text-align: center;
 }
 
-
 @media screen and (max-width: 1049px) {
     .modifyDate-container {
         display: none;
@@ -227,3 +232,56 @@ h4 {
 
 }
 
+.tabs {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.tabs label {
+    order: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem 2rem;
+    margin-right: 0.2rem;
+    cursor: pointer;
+    background-color: #2d3d2c;
+    font-weight: bold;
+    transition: background ease 0.3s;
+}
+
+.tabs .tab {
+    order: 9;
+    flex-grow: 1;
+    width: 100%;
+    height: 100%;
+    display: none;
+    padding: 1rem;
+    background: #5c5c5c;
+    padding: 20px;
+    box-shadow: -10px 10px 0px 0px black;
+}
+
+.tabs input[type="radio"] {
+    display: none;
+}
+
+.tabs input[type="radio"]:checked + label {
+    background: #5c5c5c;
+}
+
+.tabs input[type="radio"]:checked + label + .tab {
+    display: block;
+}
+
+@media (max-width: 465px) {
+    .tabs .tab,
+    .tabs label {
+        order: initial;
+    }
+
+    .tabs label {
+        width: 100%;
+        margin-left: 50px;
+    }
+}
