Image upload and display working

--- a/src/main/webapp/resources/css/all_product.css
+++ b/src/main/webapp/resources/css/all_product.css
@@ -54,11 +54,13 @@ hr {
     color: white;
     margin-right: 10px;
 }
+.images{
+    height: 175px;
+}
 
 .img {
-    width: 50%;
+    height: 100%;
     border-radius: 10px;
-    margin: 5px;
 }
 
 .slideshow-buttons {
