--- a/src/main/webapp/resources/css/signup.css
+++ b/src/main/webapp/resources/css/signup.css
@@ -184,6 +184,7 @@ li.fb a::before {
 
 .the-form [type="email"],
 .the-form [type="text"],
+.the-form [type="number"],
 .the-form [type="password"] {
     padding: 15px;
     font-size: 16px;
@@ -197,18 +198,21 @@ li.fb a::before {
 
 .the-form [type="email"]::placeholder,
 .the-form [type="text"]::placeholder,
+.the-form [type="number"]::placeholder,
 .the-form [type="password"]::placeholder {
     color: rgba(255, 255, 255, 0.3);
 }
 
 .the-form [type="email"]:hover,
 .the-form [type="text"]:hover,
+.the-form [type="number"]:hover,
 .the-form [type="password"]:hover {
     background: rgba(0, 0, 0, 0.1);
 }
 
 .the-form [type="email"]:focus,
 .the-form [type="text"]:focus,
+.the-form [type="number"]:focus,
 .the-form [type="password"]:focus {
     background: #ffffff;
     box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.06);
@@ -218,6 +222,7 @@ li.fb a::before {
 
 .the-form [type="email"]:focus::placeholder,
 .the-form [type="text"]:focus::placeholder,
+.the-form [type="number"]:focus::placeholder,
 .the-form [type="password"]:focus::placeholder {
     color: #666666;
 }
