--- a/src/main/webapp/resources/css/product_page.css
+++ b/src/main/webapp/resources/css/product_page.css
@@ -174,10 +174,12 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    width: 100px;
+    width: 250px;
     margin: 0 15px 0 15px;
 }
-
+.description{
+    margin-bottom: 100px;
+}
 .message {
     display: flex;
     flex-direction: row;
