--- a/src/main/webapp/resources/css/saved_products.css
+++ b/src/main/webapp/resources/css/saved_products.css
@@ -1,11 +1,23 @@
+html {
+    background-image: url("../img/cover.png");
+    margin: 0;
+}
 
+h2 {
+    color: white;
+}
+
+h4 {
+    font-weight: normal;
+    color: rgb(156, 156, 156);
+}
 .parent {
     margin-left: 223px;
+    margin-top: 60px;
 }
-.listReview {
+.listProductsSaved {
     margin-right: 40px;
     margin-bottom: 20px;
-    padding: 30px;
     background: #404040;
     border-radius: 5px;
     justify-content: space-between;
@@ -22,7 +34,7 @@
     color: white;
 }
 
-.review {
+.savedListProducts {
     color: rgb(212, 212, 212);
     display: flex;
     margin-right: 40px;
@@ -30,9 +42,10 @@
     padding: 10px;
     background: #404040;
     border-radius: 5px;
-    justify-content: flex-start;
+    justify-content: space-between;
+    align-items: center;
 }
-.imgReview {
+.imgSaved{
     margin-right: 10px;
     height: 120px;
     border-radius: 5px;
@@ -44,26 +57,27 @@
     display: flex;
     flex-direction: column;
     align-content: flex-start;
+    justify-content: space-around;
 }
 .productName {
     font-weight: bold;
     font-size: 20px;
 }
-.reviewMessage {
+.description {
     margin-top: 5px;
 }
-.footerReview {
+.footer {
     margin-top: 5px;
     display: flex;
     font-size: 13px;
 }
 
-.footerReview a {
+.footer a {
     text-decoration: none;
     color: white;
 }
 
-.footerReview a:hover {
+.footer a:hover {
     text-decoration: underline;
 }
 
@@ -100,9 +114,18 @@
     }
 }
 
-.titlecontainer {
+.titleContainerSaved {
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
     justify-content: space-between;
+    align-content: flex-start;
+}
+.deleteProd{
+    text-decoration: none;
+    color: antiquewhite;
+}
+.deleteProd:hover{
+    text-decoration: underline;
+    color: brown;
 }
