--- a/src/main/webapp/resources/css/home.css
+++ b/src/main/webapp/resources/css/home.css
@@ -8,6 +8,7 @@ body {
     background-image: url("../img/cover.png");
     margin: 0;
 }
+
 /* HEADER */
 .header {
     z-index: 1;
@@ -55,9 +56,10 @@ body {
 }
 
 /*SEARCH BAR*/
-.flex-container a{
+.flex-container a {
     text-decoration: none;
 }
+
 .search {
     position: relative;
     display: flex;
@@ -120,32 +122,39 @@ body {
 }
 
 .content {
+    display: flex;
     height: 100%;
     margin: 10px 50px 100px 50px;
     padding: 10px 10px;
     background-color: #474747;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    align-content: space-around;
 }
 
 .footer {
-    margin: 500px -8px -20px 0px;
     background-color: #4d7458;
     color: white;
     font-size: 20px;
+    bottom: 0;
+    position: fixed;
     bottom: 0;
     width: 100%;
 }
 
 .footer p {
-    margin-left: 20px;
+margin-left: 20px;
 }
 
 .footer a {
-    color: #394e3f;
-    text-decoration: none;
+color: #394e3f;
+text-decoration: none;
 }
 
 .footer a:hover {
-    color: #c9dace;
+color: #c9dace;
 }
 
 /* scroll bar */
@@ -211,8 +220,6 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 
-
-
 *,
 *::after,
 *::before {
@@ -228,50 +235,59 @@ body::-webkit-scrollbar-thumb:hover {
     height: 50px;
     text-align: center;
 }
+
 .notification-bell {
     animation: bell 1s 1s both infinite;
 }
+
 .notification-bell * {
     display: block;
     margin: 0 auto;
     background-color: #fff;
     box-shadow: 0px 0px 15px #fff;
 }
+
 .bell-top {
     width: 6px;
     height: 6px;
     border-radius: 3px 3px 0 0;
 }
+
 .bell-middle {
     width: 25px;
     height: 25px;
     margin-top: -1px;
     border-radius: 12.5px 12.5px 0 0;
 }
+
 .bell-bottom {
     position: relative;
     z-index: 0;
     width: 32px;
     height: 2px;
 }
+
 .bell-bottom::before,
 .bell-bottom::after {
     content: '';
     position: absolute;
     top: -4px;
 }
+
 .bell-bottom::before {
     left: 1px;
     border-bottom: 4px solid #fff;
     border-right: 0 solid transparent;
     border-left: 4px solid transparent;
 }
+
 .bell-bottom::after {
     right: 1px;
     border-bottom: 4px solid #fff;
     border-right: 4px solid transparent;
     border-left: 0 solid transparent;
 }
+
 .bell-rad {
     width: 8px;
     height: 4px;
@@ -279,6 +295,7 @@ body::-webkit-scrollbar-thumb:hover {
     border-radius: 0 0 4px 4px;
     animation: rad 1s 2s both infinite;
 }
+
 .notification-count {
     position: absolute;
     z-index: 1;
@@ -293,29 +310,69 @@ body::-webkit-scrollbar-thumb:hover {
     color: #fff;
     animation: zoom 3s 3s both infinite;
 }
+
 @keyframes bell {
-    0% { transform: rotate(0); }
-    10% { transform: rotate(30deg); }
-    20% { transform: rotate(0); }
-    80% { transform: rotate(0); }
-    90% { transform: rotate(-30deg); }
-    100% { transform: rotate(0); }
+    0% {
+        transform: rotate(0);
+    }
+    10% {
+        transform: rotate(30deg);
+    }
+    20% {
+        transform: rotate(0);
+    }
+    80% {
+        transform: rotate(0);
+    }
+    90% {
+        transform: rotate(-30deg);
+    }
+    100% {
+        transform: rotate(0);
+    }
 }
+
 @keyframes rad {
-    0% { transform: translateX(0); }
-    10% { transform: translateX(6px); }
-    20% { transform: translateX(0); }
-    80% { transform: translateX(0); }
-    90% { transform: translateX(-6px); }
-    100% { transform: translateX(0); }
+    0% {
+        transform: translateX(0);
+    }
+    10% {
+        transform: translateX(6px);
+    }
+    20% {
+        transform: translateX(0);
+    }
+    80% {
+        transform: translateX(0);
+    }
+    90% {
+        transform: translateX(-6px);
+    }
+    100% {
+        transform: translateX(0);
+    }
 }
+
 @keyframes zoom {
-    0% { opacity: 0; transform: scale(0); }
-    10% { opacity: 1; transform: scale(1); }
-    50% { opacity: 1; }
-    51% { opacity: 0; }
-    100% { opacity: 0; }
+    0% {
+        opacity: 0;
+        transform: scale(0);
+    }
+    10% {
+        opacity: 1;
+        transform: scale(1);
+    }
+    50% {
+        opacity: 1;
+    }
+    51% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 0;
+    }
 }
+
 @keyframes moon-moving {
     0% {
         transform: translate(-200%, 600%);
@@ -324,7 +381,6 @@ body::-webkit-scrollbar-thumb:hover {
         transform: translate(800%, -200%);
     }
 }
-
 
 
 @import url("https://fonts.googleapis.com/css?family=Lato:400,700");
@@ -385,7 +441,8 @@ hr {
     color: white;
     margin-right: 10px;
 }
-.images{
+
+.images {
     height: 175px;
 }
 
@@ -481,17 +538,43 @@ hr {
     height: 35px;
     right: 15px;
 }
+
 .add:hover {
     background: #30ab53;
     -webkit-transition: all 0.4s ease-in-out;
     transition: all 0.4s ease-in-out;
 }
+
 .like:hover {
     background: #30ab53;
     -webkit-transition: all 0.4s ease-in-out;
     transition: all 0.4s ease-in-out;
 }
+
 .focus {
     background: #ba7e7e;
     color: #f5f5f5;
+}
+
+.cat {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-around;
+    font-size: 30px;
+    color: grey;
+}
+
+.catOption {
+    display: flex;
+    text-decoration: none;
+    color: grey;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+}
+
+.catOption:hover {
+    color: white;
+
 }
