--- a/src/main/webapp/resources/css/home.css
+++ b/src/main/webapp/resources/css/home.css
@@ -135,6 +135,7 @@ body {
 }
 
 .footer {
+    display: flex;
     background-color: #4d7458;
     color: white;
     font-size: 20px;
@@ -142,6 +143,7 @@ body {
     position: fixed;
     bottom: 0;
     width: 100%;
+    justify-content: space-between;
 }
 
 .footer p {
@@ -577,4 +579,112 @@ hr {
 .catOption:hover {
     color: white;
 
+}
+
+
+
+.overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.7);
+    transition: opacity 500ms;
+    visibility: hidden;
+    opacity: 0;
+    z-index: 2;
+}
+.overlay:target {
+    visibility: visible;
+    opacity: 1;
+}
+
+.popup {
+    margin: 70px auto;
+    padding: 20px;
+    background: #fff;
+    border-radius: 5px;
+    width: 30%;
+    position: relative;
+    transition: all 5s ease-in-out;
+}
+
+.popup h2 {
+    margin-top: 0;
+    color: #333;
+    font-family: Tahoma, Arial, sans-serif;
+}
+.popup .close {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    transition: all 200ms;
+    font-size: 30px;
+    font-weight: bold;
+    text-decoration: none;
+    max-height: 30%;
+}
+
+@media screen and (max-width: 540px){
+    .flex-container{
+        width: 80%;
+        flex-direction: column;
+    }
+    .child-container{
+        width: 100%;
+        margin-right: 10px;
+    }
+    .images{
+        width: 200px;
+    }
+    .img{
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 380px){
+    .flex-container{
+        flex-direction: column;
+    }
+    .child-container{
+        width: auto;
+    }
+    .images{
+        width: 150px;
+    }
+    .img{
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 666px){
+    .child-container{
+        width: auto;
+    }
+    .content{
+        width: 100%;
+        margin-left: 0;
+    }
+
+    .cat {
+        font-size: 25px;
+    }
+}
+
+@media screen and (max-width: 460px){
+    .child-container{
+        width: auto;
+    }
+    .cat {
+        font-size: 20px;
+    }
+}
+@media screen and (max-width: 460px){
+    .child-container{
+        width: auto;
+    }
+    .cat {
+        font-size: 15px;
+    }
 }
