--- a/src/main/webapp/resources/css/my_products.css
+++ b/src/main/webapp/resources/css/my_products.css
@@ -111,7 +111,7 @@ h4 {
 }
 .edit {
     font-size: 20px;
-    margin-left: auto;
+    /*margin-left: auto;*/
     margin-top: 22px;
     margin-right: 20px;
     height: 50px;
