--- a/src/main/webapp/resources/css/my_profile.css
+++ b/src/main/webapp/resources/css/my_profile.css
@@ -19,6 +19,7 @@ h4 {
     justify-content: space-between;
 }
 #email {
+    padding: 0 12px;
     width: 100%;
     transition: all 0.1s ease-in-out;
     height: 40px;
@@ -69,6 +70,7 @@ h4 {
 }
 
 #telephone{
+    padding: 0 12px;
     width: 100%;
     transition: all 0.1s ease-in-out;
     height: 40px;
