--- a/src/main/webapp/resources/css/product_page.css
+++ b/src/main/webapp/resources/css/product_page.css
@@ -173,7 +173,7 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
     width: 250px;
     margin: 0 15px 0 15px;
 }
