--- a/src/main/webapp/resources/css/home.css
+++ b/src/main/webapp/resources/css/home.css
@@ -231,7 +231,7 @@ body::-webkit-scrollbar-thumb:hover {
 .notification-box {
     position: fixed;
     z-index: 99;
-    bottom: 30px;
+    top: 80px;
     right: 30px;
     width: 50px;
     height: 50px;
